Fix package building. Enhance reporter.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,10 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-package_dir =
-    = desc
+#package_dir =
+#    = desc
 packages = find:
 python_requires = >=3.8
 
 [options.packages.find]
-where = desc
+#where = desc
