Add desc-sysmon-reporter command.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,11 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-#package_dir =
-#    = desc
 packages = find:
 python_requires = >=3.8
 
 [options.packages.find]
-#where = desc
+
+[options.entry_points]
+console_scripts =
+    desc-sysmon-reporter=desc.sysmon.reporter:main_reporter
