--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = desc-wfmon
-version = 0.0.5
+version = 0.0.6
 author = David Adams
 author_email = dladams@bnl.gov
 description = 'DESC workflow monitor
@@ -22,4 +22,5 @@ python_requires = >=3.8
 
 [options.entry_points]
 console_scripts =
-    desc-sysmon-reporter=desc.sysmon.reporter:main_reporter
+    desc-sysmon-reporter=desc.sysmon:main_reporter
+    desc-sysmon-parsltest=desc.parsltest:main_parsltest
