--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = desc-wfmon
-version = 0.0.6
+version = 0.0.7
 author = David Adams
 author_email = dladams@bnl.gov
 description = 'DESC workflow monitor
@@ -22,5 +22,6 @@ python_requires = >=3.8
 
 [options.entry_points]
 console_scripts =
-    desc-sysmon-reporter=desc.sysmon:main_reporter
     desc-wfmon-parsltest=desc.parsltest:main_parsltest
+    desc-cpuburn=desc.parsltest:main_cpuburn
+    desc-sysmon-reporter=desc.sysmon:main_reporter
