Fix cpuburn again.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = desc-wfmon
-version = 0.0.8-dev5
+version = 0.0.8
 author = David Adams
 author_email = dladams@bnl.gov
 description = 'DESC workflow monitor
