--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = desc-wfmon
-version = 0.10.0
+version = 0.11.0.dev2
 author = David Adams
 author_email = dladams@bnl.gov
 description = 'DESC workflow monitor
