--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = desc-wfmon
-version = 0.18.0
+version = 0.19.0
 author = David Adams
 author_email = dladams@bnl.gov
 description = 'DESC workflow monitor
@@ -22,6 +22,8 @@ python_requires = >=3.8
 
 [options.entry_points]
 console_scripts =
+    desc-wfmon-parsltest-old=desc.parsltest:main_parsltest_old
     desc-wfmon-parsltest=desc.parsltest:main_parsltest
+    ldj-create-parsltest=desc.parsltest:main_parsltest
     desc-cpuburn=desc.parsltest:main_cpuburn
     desc-sysmon-reporter=desc.sysmon:main_reporter
