--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = desc-wfmon
-version = 0.26.5.dev2
+version = 0.26.5
 author = David Adams
 author_email = dladams@bnl.gov
 description = 'DESC workflow monitor
