--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = desc-wfmon
-version = 0.26.16
+version = 0.26.17.dev1
 author = David Adams
 author_email = dladams@bnl.gov
 description = 'DESC workflow monitor
