--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = desc-wfmon
-version = 0.26.17
+version = 0.26.18
 author = David Adams
 author_email = dladams@bnl.gov
 description = 'DESC workflow monitor
@@ -17,6 +17,8 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.8
+install_requires =
+    pandas
 
 [options.packages.find]
 
